<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:orientation="vertical"
        tools:context=".beforelogin.ForgotPasswordActivity">

        <ImageView
            android:id="@+id/ivBackArrowId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uro"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp"
                app:drawableLeftCompat="@drawable/ic_euro"
                app:drawableStartCompat="@drawable/ic_euro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_manager"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_50sdp"
                android:text="@string/forgot_password"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

<!-- Forgot password layout -->
            <EditText
                android:id="@+id/etUserEmailIdForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:autofillHints="@string/email"
                android:background="@drawable/round_button_background"
                android:drawablePadding="25dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="15dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                tools:ignore="TextFields" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:maxLines="2"
                android:text="@string/privacy"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

<!-- Email sent -->
            <TextView
                android:id="@+id/btnSendEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_50sdp"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_button_background"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/sent"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />
        </LinearLayout>


    </LinearLayout>
</layout>
