<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/topRelativeLayoutId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentTop="true"
            android:background="@color/app_color"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/tvHomeId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tvIncomeId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/income"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tvExpenseId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/expense"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/_5sdp"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/tvGraphId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/graph"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/containerFrameLayoutId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottomRelativeLayoutId"
            android:layout_below="@+id/topRelativeLayoutId">

        </FrameLayout>

        <RelativeLayout
            android:id="@+id/bottomRelativeLayoutId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/app_color">

            <TextView
                android:id="@+id/tvNewEntryId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/app_color"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/new_entry"
                android:textColor="@color/white"
                android:textSize="@dimen/_17sdp" />

            <ImageView
                android:id="@+id/ivLogoutId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/ic_logout"
                app:tint="@color/white" />

        </RelativeLayout>
    </RelativeLayout>
</layout>
